@@ -286,6 +286,9 @@ Sends the modem initialization string. If you are online and the DCD line
 setting is on, you are asked for confirmation before the modem is 
 initialized.
 .TP 0.5i
+.B N
+Toggle whether each line is prefixed with current date and time.
+.TP 0.5i
 .B O
 Configure minicom. Puts you in the configuration menu.
 .TP 0.5i
